// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VApp.js should allow a custom id 1`] = `
<div data-app="true"
     class="v-application theme--light"
     id="inspire"
>
  <div class="v-application--wrap">
  </div>
</div>
`;

exports[`VApp.js should match a snapshot 1`] = `
<div data-app="true"
     class="v-application theme--light"
     id="app"
>
  <div class="v-application--wrap">
  </div>
</div>
`;
